# LaTeX-word-count

./: README  README.md  setup.cfg  wordcount.py  wordcount.txt
src/: wordcount.sh
src/wordcount/: wordcount.py
