[metadata]
# replace with your username:
name = word-count-hmwakeling
version = 0.0.1
author = H. M. Wakeling
author_email = hmwakeling@hotmail.com
description = A small wordcount package for latex with plotting capability.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmwakeling/LaTeX-word-count
project_urls =
    Bug Tracker = https://github.com/hmwakeling/LaTeX-word-count/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: MacOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src